--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datetime superapp</title>
-    <script src="./js/main.js" type="module"></script>
+    <script src="./js/main.js" type="module">
+
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 
